[gd_scene load_steps=4 format=2]

[ext_resource path="res://Clippy.png" type="Texture" id=1]
[ext_resource path="res://Clippy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 39.3021
height = 31.7364

[node name="Clippy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Clippy" type="Sprite" parent="."]
position = Vector2( 1.36493, -0.718307 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.353546, -6.36396 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001

[node name="Stopper" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Stopper" to="." method="_on_Stopper_timeout"]
